# TinyTcp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  gen_vs2015_64.sh  server.cpp
TinyClient/: Makefile  client.cpp
src/TinyTcp/: CMakeLists.txt  NetworkUtil.cpp  NetworkUtil.h  SocketUtil.cpp  SocketUtil.h  TimeUtil.cpp  TimeUtil.h  TinyTcpClient.cpp  TinyTcpClient.h  TinyTcpServer.cpp  TinyTcpServer.h  TinyUdpClient.cpp  TinyUdpClient.h  TinyUdpServer.cpp  TinyUdpServer.h
src/test_client/: CMakeLists.txt  client.cpp
src/test_server/: CMakeLists.txt  server.cpp
src/test_tcp_client/: CMakeLists.txt  client.cpp
src/test_tcp_server/: CMakeLists.txt
src/test_udp_client/: CMakeLists.txt  client.cpp
src/test_udp_server/: CMakeLists.txt  server.cpp
